Changes in version 1.2.6.2
--------------------------

  * increased TED sound output level relative to SID output level, for
    better accuracy in programs that use both types of sound at the same
    time
  * some utility improvements
  * a few Linux compile and link errors have been fixed

Changes in version 1.2.6.1
--------------------------

  * fixed bug in changing the type of a floppy drive with no image file
    selected
  * fixed link errors when building from source code on Linux

Changes in version 1.2.6
------------------------

  * implemented IEC level floppy drive emulation; this allows access to
    a directory on the PC filesystem, and supports reading and writing
    .prg, .p00, .s00, .u00, and .r00 files, and some commonly used CBM
    DOS commands
  * the debugger window now displays the current state of TED registers
  * on Windows and MacOS X the native file selection dialog is used
    instead of the FLTK one; also, the last PRG and screenshot file
    selected is remembered by the dialogs
  * various improvements have been made to the utilities
  * changed the TED luminance table to (hopefully) match the colors of
    the real machine more accurately
  * when recording video to AVI files in RLE8 format, some TV emulation
    color effects are now also captured using additional palette colors
  * D64 files with any number of tracks from 35 to 42 are supported
  * new/improved GUI keyboard shortcuts
  * the old file I/O hack has been removed, since its functionality is
    now replaced by the IEC level drive emulation
  * added Gtk+ GUI theme (enabled with '-colorscheme 3' command line
    option)
  * some minor bugs have been fixed

Changes in version 1.2.5.2
--------------------------

  * fixed some minor TED emulation bugs

Changes in version 1.2.5.1
--------------------------

  * the full speed mode (Alt+W) now restores the original speed setting
    when turned off
  * added a "go to program counter" button to the disassembler in the