@@ -98,8 +98,9 @@ namespace Plus4 {
     int32_t tmp = vm.soundOutputAccumulator;
     if (tmp != 0) {
       vm.soundOutputAccumulator = 0;
-      tmp = (tmp * int32_t(3)) / int32_t(176);
-      tmp = (tmp >= -24576 ? (tmp < 24576 ? tmp : 24576) : -24576);
+      tmp = (tmp >= -1441792 ? (tmp < 1441792 ? tmp : 1441792) : -1441792);
+      tmp = int32_t((uint32_t(tmp * vm.sidOutputVolume)
+                     + uint32_t(0x80008000UL)) >> 16) - int32_t(32768);
     }
     vm.soundOutputSignal = tmp + int32_t(sampleValue);
     vm.sendMonoAudioOutput(vm.soundOutputSignal);
@@ -597,6 +598,7 @@ namespace Plus4 {
       sid_((SID *) 0),
       soundOutputAccumulator(0),
       soundOutputSignal(0),
+      sidOutputVolume(1117),
       sidEnabled(false),
       sidModel6581(false),
       digiBlasterEnabled(false),
@@ -902,7 +904,8 @@ namespace Plus4 {
     }
   }
 
-  void Plus4VM::setSIDConfiguration(bool is6581, bool enableDigiBlaster)
+  void Plus4VM::setSIDConfiguration(bool is6581, bool enableDigiBlaster,
+                                    int outputVolume)
   {
     if (is6581 != sidModel6581) {
       sidModel6581 = is6581;
@@ -917,6 +920,27 @@ namespace Plus4 {
         sid_->input((int(digiBlasterOutput) << 8) - 32768);
       else
         sid_->input(0);
+    }
+    int32_t newSIDOutputVolume =
+        int32_t(std::pow(10.0, double(outputVolume) * 0.05)
+                * (65536.0 * 3.0 / 176.0) + 0.5);
+    if (newSIDOutputVolume != sidOutputVolume) {
+      // adjust tape feedback level so that only the SID output level changes
+      int     tapeFeedbackLevel_ = 0;
+      if (tapeFeedbackLevel > 0) {
+        tapeFeedbackLevel_ =
+            int((std::log(double(tapeFeedbackLevel)
+                          * double(sidOutputVolume) / (11264.0 * 1117.0))
+                 / std::log(2.0)) * 2.0 + 0.5);
+      }
+      else if (tapeFeedbackLevel < 0) {
+        tapeFeedbackLevel_ =
+            int((std::log(double(tapeFeedbackLevel)
+                          * double(sidOutputVolume) / (-11264.0 * 1117.0))
+                 / std::log(2.0)) * -2.0 - 0.5);
+      }
+      sidOutputVolume = newSIDOutputVolume;
+      setTapeFeedbackLevel(tapeFeedbackLevel_);
     }
   }
 
@@ -1447,12 +1471,14 @@ namespace Plus4 {
   {
     n = (n >= -10 ? (n <= 10 ? n : 10) : -10);
     if (n > 0) {
-      tapeFeedbackLevel =
-          int32_t(std::pow(2.0, double(n) * 0.5) * 11264.0 + 0.5);
+      tapeFeedbackLevel = int32_t(std::pow(2.0, double(n) * 0.5)
+                                  * 11264.0 * 1117.0 / double(sidOutputVolume)
+                                  + 0.5);
     }
     else if (n < 0) {
-      tapeFeedbackLevel =
-          int32_t(std::pow(2.0, double(n) * -0.5) * -11264.0 - 0.5);
+      tapeFeedbackLevel = int32_t(std::pow(2.0, double(n) * -0.5)
+                                  * -11264.0 * 1117.0 / double(sidOutputVolume)
+                                  - 0.5);
     }
     else
       tapeFeedbackLevel = 0;
