@@ -27,44 +27,44 @@ static const uint8_t  tedSoundVolumeTable[16] = {
 };
 
 static const int16_t  tedSoundDistortionTable[301] = {
-      0,     8,    21,    37,    56,    77,    99,   123,
-    148,   175,   202,   231,   261,   292,   324,   357,
-    391,   425,   461,   497,   534,   572,   610,   649,
-    689,   729,   771,   812,   855,   897,   941,   985,
-   1030,  1075,  1121,  1167,  1214,  1261,  1309,  1357,
-   1406,  1455,  1505,  1555,  1606,  1657,  1709,  1761,
-   1813,  1866,  1920,  1974,  2028,  2083,  2138,  2193,
-   2249,  2305,  2362,  2419,  2476,  2534,  2592,  2651,
-   2710,  2769,  2829,  2889,  2950,  3011,  3072,  3133,
-   3195,  3257,  3320,  3383,  3446,  3510,  3574,  3638,
-   3703,  3768,  3833,  3899,  3965,  4031,  4097,  4164,
-   4232,  4299,  4367,  4435,  4504,  4573,  4642,  4711,
-   4781,  4851,  4921,  4992,  5063,  5134,  5206,  5278,
-   5350,  5422,  5495,  5568,  5641,  5715,  5789,  5863,
-   5938,  6012,  6088,  6163,  6239,  6315,  6391,  6467,
-   6544,  6621,  6698,  6776,  6854,  6932,  7011,  7089,
-   7168,  7248,  7327,  7407,  7487,  7567,  7648,  7729,
-   7810,  7892,  7973,  8055,  8138,  8220,  8303,  8386,
-   8469,  8553,  8637,  8721,  8805,  8890,  8975,  9060,
-   9146,  9231,  9317,  9403,  9490,  9577,  9664,  9751,
-   9838,  9926, 10014, 10103, 10191, 10280, 10369, 10458,
-  10548, 10638, 10728, 10818, 10909, 11000, 11091, 11182,
-  11274, 11366, 11458, 11550, 11643, 11736, 11829, 11922,
-  12016, 12110, 12204, 12298, 12393, 12488, 12583, 12678,
-  12774, 12870, 12966, 13063, 13159, 13256, 13353, 13451,
-  13548, 13646, 13745, 13843, 13942, 14040, 14140, 14239,
-  14339, 14439, 14539, 14639, 14740, 14841, 14942, 15043,
-  15145, 15247, 15349, 15451, 15554, 15657, 15760, 15864,
-  15967, 16071, 16175, 16280, 16384, 16489, 16594, 16700,
-  16805, 16911, 17017, 17124, 17230, 17337, 17444, 17552,
-  17659, 17767, 17875, 17984, 18092, 18201, 18310, 18420,
-  18529, 18639, 18749, 18860, 18970, 19081, 19192, 19304,
-  19415, 19527, 19639, 19752, 19864, 19977, 20090, 20204,
-  20317, 20431, 20545, 20660, 20774, 20889, 21004, 21120,
-  21235, 21351, 21467, 21584, 21700, 21817, 21934, 22052,
-  22169, 22287, 22406, 22524, 22643, 22762, 22881, 23000,
-  23120, 23240, 23360, 23480, 23601, 23722, 23843, 23965,
-  24087, 24209, 24331, 24453, 24576
+      0,    66,   135,   205,   276,   347,   419,   491,
+    563,   635,   708,   781,   854,   927,  1000,  1073,
+   1146,  1219,  1293,  1366,  1440,  1513,  1587,  1660,
+   1734,  1808,  1882,  1955,  2029,  2103,  2177,  2251,
+   2325,  2399,  2473,  2547,  2621,  2695,  2770,  2844,
+   2918,  2992,  3067,  3141,  3215,  3290,  3364,  3438,
+   3513,  3587,  3662,  3737,  3811,  3886,  3961,  4035,
+   4110,  4185,  4260,  4334,  4409,  4484,  4559,  4634,
+   4709,  4784,  4860,  4935,  5010,  5085,  5160,  5236,
+   5311,  5387,  5462,  5537,  5613,  5689,  5764,  5840,
+   5916,  5991,  6067,  6143,  6219,  6295,  6371,  6447,
+   6523,  6599,  6675,  6752,  6828,  6904,  6981,  7057,
+   7134,  7210,  7287,  7364,  7440,  7517,  7594,  7671,
+   7748,  7825,  7902,  7979,  8056,  8134,  8211,  8288,
+   8366,  8443,  8521,  8599,  8676,  8754,  8832,  8910,
+   8988,  9066,  9144,  9222,  9300,  9379,  9457,  9536,
+   9614,  9693,  9771,  9850,  9929, 10008, 10087, 10166,
+  10245, 10324, 10403, 10482, 10562, 10641, 10721, 10801,
+  10880, 10960, 11040, 11120, 11200, 11280, 11360, 11440,
+  11521, 11601, 11682, 11762, 11843, 11924, 12005, 12085,
+  12166, 12248, 12329, 12410, 12491, 12573, 12654, 12736,
+  12818, 12900, 12981, 13063, 13146, 13228, 13310, 13392,
+  13475, 13557, 13640, 13723, 13805, 13888, 13971, 14055,
+  14138, 14221, 14304, 14388, 14472, 14555, 14639, 14723,
+  14807, 14891, 14975, 15060, 15144, 15228, 15313, 15398,
+  15483, 15568, 15653, 15738, 15823, 15908, 15994, 16079,
+  16165, 16251, 16337, 16423, 16509, 16595, 16681, 16768,
+  16854, 16941, 17028, 17115, 17202, 17289, 17376, 17464,
+  17551, 17639, 17726, 17814, 17902, 17990, 18078, 18167,
+  18255, 18344, 18432, 18521, 18610, 18699, 18788, 18877,
+  18967, 19056, 19146, 19236, 19326, 19416, 19506, 19596,
+  19687, 19777, 19868, 19959, 20049, 20141, 20232, 20323,
+  20414, 20506, 20598, 20690, 20782, 20874, 20966, 21058,
+  21151, 21244, 21336, 21429, 21522, 21615, 21709, 21802,
+  21896, 21990, 22084, 22178, 22272, 22366, 22461, 22555,
+  22650, 22745, 22840, 22935, 23030, 23126, 23222, 23317,
+  23413, 23509, 23606, 23702, 23798, 23895, 23992, 24089,
+  24186, 24283, 24381, 24478, 24576
 };
 
 namespace Plus4 {
@@ -114,8 +114,10 @@ namespace Plus4 {
       ted.soundChannel1State = uint8_t(1);
       ted.soundChannel2State = uint8_t(1);
     }
-    ted.updateSoundChannel1Output();
-    ted.updateSoundChannel2Output();
+    else {
+      ted.updateSoundChannel1Output();
+      ted.updateSoundChannel2Output();
+    }
   }
 
   void TED7360::calculateSoundOutput()
@@ -124,16 +126,34 @@ namespace Plus4 {
       // DAC mode
       soundChannel1Cnt = soundChannel1Reload;
       soundChannel2Cnt = soundChannel2Reload;
-      soundChannel1Decay--;
-      if (!soundChannel1Decay)
-        prvSoundChannel1Overflow = true;
-      soundChannel2Decay--;
-      if (!soundChannel2Decay)
-        prvSoundChannel2Overflow = true;
+      soundChannel1State = uint8_t(1);
+      soundChannel2State = uint8_t(1);
       soundChannel2NoiseState = uint8_t(0xFF);
       soundChannel2NoiseOutput = uint8_t(1);
       updateSoundChannel1Output();
       updateSoundChannel2Output();
+      if (soundChannel1Cnt == 1) {
+        if (soundChannel1Decay > 0U && soundChannel1Decay <= 131072U) {
+          soundChannel1Decay--;
+          soundChannel1State = uint8_t(0);
+        }
+        prvSoundChannel1Overflow = true;
+      }
+      else {
+        soundChannel1Decay = 131072U;
+        prvSoundChannel1Overflow = false;
+      }
+      if (soundChannel2Cnt == 1) {
+        if (soundChannel2Decay > 0U && soundChannel2Decay <= 131072U) {
+          soundChannel2Decay--;
+          soundChannel2State = uint8_t(0);
+        }
+        prvSoundChannel2Overflow = true;
+      }
+      else {
+        soundChannel2Decay = 131072U;
+        prvSoundChannel2Overflow = false;
+      }
     }
     else {
       // channel 1
